--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -46,8 +46,8 @@
 
   "assistant": {
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "claude-3-5-sonnet"
+      "provider": "zed.dev",
+      "model": "claude-3-7-sonnet-latest"
     },
     "version": "2"
   },
