better tmux status bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,13 +36,29 @@ bind x kill-pane
 bind Q kill-session
 
 # floating window
-bind g display-popup -w 80% -h 80% -E "tmux attach -t scratch || tmux new -s scratch"
+bind g display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach -t scratch || tmux new -s scratch"
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 
 # Ensure window index numbers are updated whenever a window is closed
 set -g renumber-windows on
+
+set -g status-interval 5
+
+# Status bar design
+set -g status-style bg=default,fg=white
+set -g status-left-length 40
+set -g status-left "#[fg=green]Session: #S #[fg=white]| "
+
+# Window status format (Active vs Inactive)
+setw -g window-status-current-style fg=black,bg=cyan,bold
+setw -g window-status-current-format " #I:#W "
+setw -g window-status-style fg=brightwhite,bg=default
+setw -g window-status-format " #I:#W "
+
+set -g status-right-length 100
+set -g status-right "#[fg=green]  #(whoami)  %H:%M "
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
