ctrl g tmux toggle

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,7 +36,9 @@ bind x kill-pane
 bind Q kill-session
 
 # floating window
-bind g display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach -t scratch || tmux new -s scratch"
+bind g if-shell '[ "#{session_name}" = "scratch" ]' \
+    'detach-client' \
+    'display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach -t scratch || tmux new -s scratch"'
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
