--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -42,7 +42,6 @@ bind g if-shell '[ "#{session_name}" = "scratch" ]' \
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
-
 # Ensure window index numbers are updated whenever a window is closed
 set -g renumber-windows on
 
@@ -51,12 +50,12 @@ set -g status-interval 5
 # Status bar design
 set -g status-style bg=default,fg=white
 set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=white]| "
+set -g status-left "#[fg=green][#S] #[fg=white] "
 
 # Window status format (Active vs Inactive)
-setw -g window-status-current-style fg=black,bg=cyan,bold
-setw -g window-status-current-format " #I:#W "
-setw -g window-status-style fg=brightwhite,bg=default
+setw -g window-status-current-style fg=green,bg=default
+setw -g window-status-current-format " #I:#W* "
+setw -g window-status-style fg=brightwhite,bold,bg=default
 setw -g window-status-format " #I:#W "
 
 set -g status-right-length 100
