resize using mouse

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,6 +18,9 @@ unbind %
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/tmux.conf
 
+# resize with mouse
+set -g mouse on
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
