tmux open new win in same dir

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,6 +11,8 @@ bind s split-window -v -c "#{pane_current_path}"
 # Remap session list from 's' to 'S'
 bind S choose-tree -s
 
+bind c new-window -c "#{pane_current_path}"
+
 # Unbind the default keys to avoid confusion
 unbind '"'
 unbind %
