--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,7 +36,7 @@ bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
 set-option -g allow-rename off
 
 # kill pane without confirmation
-bind x kill-pane
+bind q kill-pane
 # kill session without confirmation
 bind Q kill-session
 
