--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -10,9 +10,9 @@ quick-terminal-size = 70%
 
 macos-option-as-alt = left
 
-fullscreen = true
-window-decoration = client
-
 window-padding-y = 0
 window-padding-color = "extend"
 window-padding-balance = true
+title = " "
+macos-titlebar-proxy-icon = hidden
+window-save-state = always
