--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,6 +45,8 @@ bind g if-shell '[ "#{session_name}" = "scratch" ]' \
     'detach-client' \
     'display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach -t scratch || tmux new -s scratch"'
 
+bind-key Tab switch-client -l
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 # Ensure window index numbers are updated whenever a window is closed
@@ -66,10 +68,16 @@ setw -g window-status-format " #I:#W "
 set -g status-right-length 100
 set -g status-right "#[fg=green]  #(whoami)  %H:%M "
 
+# Put the tmux status bar at the top
+set -g status-position top
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @plugin 'kristijan/fzf-pane-switch.tmux'
+set -g @fzf_pane_switch_bind-key 'f'
 
 # Enable automatic restore
 set -g @continuum-restore 'on'
