--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -93,7 +93,7 @@
     "button": true,
     "default_model": {
       "provider": "copilot_chat",
-      "model": "claude-sonnet-4",
+      "model": "gpt-5-mini",
     },
     "default_profile": "ask",
   },
