tmux better session switch

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -76,8 +76,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @plugin 'kristijan/fzf-pane-switch.tmux'
-set -g @fzf_pane_switch_bind-key 'f'
+set -g @plugin 'sainnhe/tmux-fzf'
+bind-key "S" run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
 
 # Enable automatic restore
 set -g @continuum-restore 'on'
