--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -68,6 +68,9 @@ setw -g window-status-format " #I:#W "
 set -g status-right-length 100
 set -g status-right "#[fg=green]  #(whoami)  %H:%M "
 
+setw -g mode-keys vi
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
 # Put the tmux status bar at the top
 set -g status-position top
 
