--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -74,6 +74,9 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 # Put the tmux status bar at the top
 set -g status-position top
 
+setw -g window-status-current-format " #I:#W* #{?window_zoomed_flag,Z ,}"
+setw -g window-status-format " #I:#W #{?window_zoomed_flag,Z ,}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
