--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -6,104 +6,226 @@
 // To see all of Zed's default settings without changing your
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
+// {
+//   "collaboration_panel": {
+//     "button": false,
+//   },
+//   "notification_panel": {
+//     "button": false,
+//   },
+//   "outline_panel": {
+//     "button": true,
+//   },
+//   "tabs": {
+//     "show_close_button": "hover",
+//     "show_diagnostics": "errors",
+//     "file_icons": true,
+//   },
+//   "tab_bar": {
+//     "show": true,
+//   },
+//   "title_bar": {
+//     "show_onboarding_banner": true,
+//     "show_project_items": true,
+//     "show_branch_icon": false,
+//   },
+//   "debugger": {
+//     "button": true,
+//   },
+//   "search": {
+//     "button": true,
+//   },
+//   "diagnostics": {
+//     "button": true,
+//   },
+//   "status_bar": {
+//     "cursor_position_button": false,
+//     "active_language_button": true,
+//   },
+//   "project_panel": {
+//     "indent_size": 14.0,
+//     "entry_spacing": "standard",
+//     "default_width": 240.0,
+//     "button": true,
+//   },
+//   "colorize_brackets": false,
+//   "inlay_hints": {
+//     "show_background": false,
+//     "enabled": true,
+//   },
+//   "minimap": {
+//     "max_width_columns": 60,
+//     "current_line_highlight": "all",
+//     "thumb": "always",
+//     "display_in": "all_editors",
+//     "show": "auto",
+//   },
+//   "scrollbar": {
+//     "axes": {
+//       "vertical": true,
+//       "horizontal": true,
+//     },
+//   },
+//   "gutter": {
+//     "min_line_number_digits": 5,
+//   },
+//   "sticky_scroll": {
+//     "enabled": true,
+//   },
+//   "cursor_shape": "underline",
+//   "agent_ui_font_size": 15.0,
+//   "buffer_font_weight": 450.0,
+//   "telemetry": {
+//     "diagnostics": false,
+//     "metrics": false,
+//   },
+//   "ui_font_family": "Symbols Nerd Font Mono",
+//   "buffer_font_family": "FiraCode Nerd Font Mono",
+//   "edit_predictions": {
+//     "mode": "subtle",
+//   },
+//   "relative_line_numbers": "wrapped",
+//   "terminal": {
+//     "button": false,
+//     "option_as_meta": true,
+//   },
+//   "agent": {
+//     "button": true,
+//     "default_model": {
+//       "provider": "copilot_chat",
+//       "model": "gpt-5-mini",
+//     },
+//     "default_profile": "ask",
+//   },
+//   "window_decorations": "client",
+//   "ui_font_size": 15.0,
+
+//   "buffer_font_size": 14.0,
+//   "icon_theme": "Material Icon Theme",
+//   "theme": "Carbonfox - opaque",
+//   "wrap_guides": [120, 80],
+
+//   "vim_mode": true,
+// }
+
+// settings.json, generated at Sat Mar 22 2025 17:00:58 GMT+0800 (Singapore Standard Time)
+// Zed settings
+//
+// For information on how to configure Zed, see the Zed
+// documentation: https://zed.dev/docs/configuring-zed
+//
+// To see all of Zed's default settings without changing your
+// custom settings, run the `open default settings` command
+// from the command palette or from `Zed` application menu.
 {
-  "collaboration_panel": {
-    "button": false,
+  "git_panel": {
+    "dock": "right",
   },
-  "notification_panel": {
-    "button": false,
+  "icon_theme": "Material Icon Theme",
+  "theme": "Carbonfox - blurred",
+  "base_keymap": "VSCode",
+  "ui_font_size": 15,
+  "buffer_font_size": 15,
+  // Finder model width
+  "file_finder": {
+    "modal_max_width": "medium",
   },
-  "outline_panel": {
-    "button": true,
+  "buffer_font_family": "FiraCode Nerd Font Mono",
+  "ui_font_family": "Symbols Nerd Font Mono",
+  // Vim mode settings
+  "vim_mode": true,
+  "vim": {
+    "use_system_clipboard": "on_yank",
+    "highlight_on_yank_duration": 200,
+    "use_smartcase_find": true,
   },
-  "tabs": {
-    "show_close_button": "hover",
-    "show_diagnostics": "errors",
-    "file_icons": true,
-  },
+  // use relative line numbers
+  "relative_line_numbers": "enabled",
   "tab_bar": {
     "show": true,
   },
-  "title_bar": {
-    "show_onboarding_banner": true,
-    "show_project_items": true,
-    "show_branch_icon": false,
-  },
-  "debugger": {
-    "button": true,
-  },
-  "search": {
-    "button": true,
-  },
-  "diagnostics": {
-    "button": true,
-  },
-  "status_bar": {
-    "cursor_position_button": false,
-    "active_language_button": true,
-  },
-  "project_panel": {
-    "indent_size": 14.0,
-    "entry_spacing": "standard",
-    "default_width": 240.0,
-    "button": true,
-  },
-  "colorize_brackets": false,
-  "inlay_hints": {
-    "show_background": false,
-    "enabled": true,
-  },
-  "minimap": {
-    "max_width_columns": 60,
-    "current_line_highlight": "all",
-    "thumb": "always",
-    "display_in": "all_editors",
-    "show": "auto",
-  },
   "scrollbar": {
-    "axes": {
-      "vertical": true,
-      "horizontal": true,
+    "show": "never",
+  },
+  // Only show error on tab
+  "tabs": {
+    "show_diagnostics": "errors",
+  },
+  // Indentation, rainbow indentation
+  "indent_guides": {
+    "enabled": true,
+    "coloring": "indent_aware",
+  },
+  // NOTE: Zen mode, refer https://github.com/zed-industries/zed/issues/4382 when it's resolved
+  "centered_layout": {
+    "left_padding": 0.15,
+    "right_padding": 0.15,
+  },
+  // Use Copilot Chat AI as default
+  "agent": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "claude-3-7-sonnet",
     },
   },
-  "gutter": {
-    "min_line_number_digits": 5,
-  },
-  "sticky_scroll": {
+  // Inlay hints preconfigured by Zed: Go, Rust, Typescript and Svelte
+  "inlay_hints": {
     "enabled": true,
   },
-  "cursor_shape": "underline",
-  "agent_ui_font_size": 15.0,
-  "buffer_font_weight": 450.0,
+  // Use zed commit editor
+  "terminal": {
+    "env": {
+      "EDITOR": "zed --wait",
+    },
+  },
+  // File syntax highlighting
+  "file_types": {
+    "Dockerfile": ["Dockerfile", "Dockerfile.*"],
+    "JSON": ["json", "jsonc", "*.code-snippets"],
+  },
+  // File scan exclusions, hide on the file explorer and search
+  "file_scan_exclusions": [
+    "**/.git",
+    "**/.svn",
+    "**/.hg",
+    "**/CVS",
+    "**/.DS_Store",
+    "**/Thumbs.db",
+    "**/.classpath",
+    "**/.settings",
+    // above is default from Zed
+    "**/out",
+    "**/dist",
+    "**/.husky",
+    "**/.turbo",
+    "**/.vscode-test",
+    "**/.vscode",
+    "**/.next",
+    "**/.storybook",
+    "**/.tap",
+    "**/.nyc_output",
+    "**/report",
+    "**/node_modules",
+  ],
+  // Turn off telemetry
   "telemetry": {
     "diagnostics": false,
     "metrics": false,
   },
-  "ui_font_family": "Symbols Nerd Font Mono",
-  "buffer_font_family": "FiraCode Nerd Font Mono",
-  "edit_predictions": {
-    "mode": "subtle",
-  },
-  "relative_line_numbers": "wrapped",
-  "terminal": {
-    "button": false,
-    "option_as_meta": true,
-  },
-  "agent": {
+  // Move all panel to the right
+  "project_panel": {
     "button": true,
-    "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-5-mini",
-    },
-    "default_profile": "ask",
+    "dock": "right",
+    "git_status": true,
   },
-  "window_decorations": "client",
-  "ui_font_size": 15.0,
-
-  "buffer_font_size": 14.0,
-  "icon_theme": "Material Icon Theme",
-  "theme": "Carbonfox - opaque",
-  "wrap_guides": [120, 80],
-
-  "vim_mode": true,
+  "outline_panel": {
+    "dock": "right",
+  },
+  "collaboration_panel": {
+    "dock": "left",
+  },
+  // Move some unnecessary panels to the left
+  "notification_panel": {
+    "dock": "left",
+  },
 }
