--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -54,6 +54,10 @@ set -g renumber-windows on
 
 set -g status-interval 5
 
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
+
 # Status bar design
 set -g status-style bg=default,fg=white
 set -g status-left-length 40
