cleanup and organize tmux conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,14 +8,11 @@ bind-key C-a send-prefix
 bind v split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 
-# Remap session list from 's' to 'S'
-bind S choose-tree -s
-
-bind c new-window -c "#{pane_current_path}"
-
 # Unbind the default keys to avoid confusion
 unbind '"'
 unbind %
+
+bind c new-window -c "#{pane_current_path}"
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/tmux.conf
@@ -45,47 +42,47 @@ bind g if-shell '[ "#{session_name}" = "scratch" ]' \
     'detach-client' \
     'display-popup -w 80% -h 80% -d "#{pane_current_path}" -E "tmux attach -t scratch || tmux new -s scratch"'
 
+# bind tab to switch session
 bind-key Tab switch-client -l
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
 # Ensure window index numbers are updated whenever a window is closed
 set -g renumber-windows on
-
 set -g status-interval 5
 
+# swap windows
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
-
 
 # Status bar design
 set -g status-style bg=default,fg=white
 set -g status-left-length 40
 set -g status-left "#[fg=green][#S] #[fg=white] "
+set -g status-right-length 100
+set -g status-right "#[fg=green]  #(whoami)  %H:%M "
+
+# Put the tmux status bar at the top
+set -g status-position top
 
 # Window status format (Active vs Inactive)
 setw -g window-status-current-style fg=green,bg=default
 setw -g window-status-current-format " #I:#W* "
 setw -g window-status-style fg=brightwhite,bold,bg=default
 setw -g window-status-format " #I:#W "
-
-set -g status-right-length 100
-set -g status-right "#[fg=green]  #(whoami)  %H:%M "
-
-setw -g mode-keys vi
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-
-# Put the tmux status bar at the top
-set -g status-position top
-
 setw -g window-status-current-format " #I:#W* #{?window_zoomed_flag,Z ,}"
 setw -g window-status-format " #I:#W #{?window_zoomed_flag,Z ,}"
+
+# vim key bindings
+setw -g mode-keys vi
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# Remap session list from 's' to 'S'
 set -g @plugin 'sainnhe/tmux-fzf'
 bind-key "S" run-shell -b "~/.config/tmux/plugins/tmux-fzf/scripts/session.sh switch"
 
